# statusline

./: .gitignore  LICENSE  README.md  pyproject.toml
statusline/: __init__.py  core.py
statusline.egg-info/: PKG-INFO  SOURCES.txt
